<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyAccountFragment">

    <TextView
        android:id="@+id/TVMyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Red"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/my_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/group"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/TVMyAccount" />
    <TextView
        android:id="@+id/TVUnlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlock_all_feature"
        android:gravity="center"
        android:textStyle="italic|bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </TextView>

    <TextView
        android:id="@+id/TVUnlockFeature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_to_unlock_all_the_features_of_this_app_for_a_better_shopping_experience"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/TVUnlock">
    </TextView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/hr"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/TVUnlockFeature" />

    <Button
        android:id="@+id/BtnUnlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Red"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/tvTitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnUnlock" />









</androidx.constraintlayout.widget.ConstraintLayout>