<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="220dp"
    android:layout_height="360dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="40dp"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:id="@+id/rv_LatestDeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <ImageView
                android:id="@+id/imview"
                android:layout_width="match_parent"
                android:src="@drawable/appleiphone"
                android:layout_height="250dp"
                android:scaleType="fitXY">

            </ImageView>

            <ImageView
                android:id="@+id/imlike"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp" />
        </RelativeLayout>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_LatestDeal"
            android:layout_marginTop="10dp"
            android:text="@string/mobile"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/tvprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="10dp"
            android:text="@string/_999"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"/>
        <TextView
            android:id="@+id/tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvprice"
            android:layout_marginTop="10dp"
            android:text="@string/e2business"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_round"
        android:foregroundTint="@color/Red"
        android:textColor="@color/white"
        android:paddingHorizontal="20dp"
        android:text="@string/_5_off"
        android:textSize="20sp" />


</androidx.cardview.widget.CardView>